<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#257D87" >

       <TextView
           android:id="@+id/textView1"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_weight="2"
           android:gravity="center"
        android:textColor="#E6E0D2"
           android:textSize="25sp"
           android:text="@string/after_complaign_text1" />

       <TextView
           android:id="@+id/textView2"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="20sp"
           android:layout_weight="1.83"
           android:gravity="top|center"
           android:text="@string/fter_campaign_txt2"
           android:textColor="#E6E0D2"
           android:textSize="23sp" />

       <TextView
           android:id="@+id/textView3"
           android:layout_width="320dp"
           android:layout_height="wrap_content"
           android:layout_weight="1.96"
           android:gravity="center"
           android:text="XGH34J"
           android:textColor="#ED1847"
           android:textSize="30sp" />

       <TextView
           android:id="@+id/textView4"
           android:layout_weight="1"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:textColor="#FFFFFF"
           android:textSize="20sp"
           android:text="Check Our website for more !" />

       <Button
           android:id="@+id/after_compaign_btn"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:layout_weight="0.6"
           android:background="#BF9A54"
           android:textColor="#FFFFFF"
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp"
           android:text="@string/after_compaign_button_str"
           android:textSize="@dimen/after_compaign_btn_str_sze" />
       
       <TextView
           android:id="@+id/textView5"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:layout_weight="1" />
       
 </LinearLayout>
